# amazon-corretto-crypto-provider

./: .clang-format  .gitignore  .gitmodules  .project  CHANGELOG.md  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT-GUIDE.md  DIFFERENCES.md  Dockerfile.dev  Dockerfile.dev-fips  LICENSE  NOTICE  PROMPT.md  README-JML.md  README.md  THIRD-PARTY  TestCfb.java  TestKEM.java  VERSIONING.rst  arm.patch  awslc.sha256  build.gradle  checkstyle-suppressions.xml  checkstyle.xml  ed25519ph_interop_test.sh  final-link.version  findbugs-exclude.xml  openssl.sha256  settings.gradle
.github/: CODEOWNERS  codecov.yml
.github/workflows/: codecov-ci.yml  jca-conformance.yml  macos_ci.yml  macos_ci_fips.yml  macos_ci_jobs.yml
CMake/trycompile/: CMakeLists.txt  coverage_main.cxx  use_openssl.cxx
benchmarks/: .gitignore  README.md  settings.gradle.kts
benchmarks/lib/: build.gradle.kts
build-tools/license-headers/: LicenseHeader.java
csrc/: accp_lc_loader.cpp  aes_cbc.cpp  aes_cfb.cpp  aes_ctr_drbg.cpp  aes_ctr_drbg.h  aes_gcm.cpp  aes_gcm_siv.cpp  aes_kw.cpp  aes_kwp.cpp  aes_xts.cpp  agreement.cpp  amazon_corretto_crypto_provider.cpp  atomic_bool.h  auto_free.h  bn.cpp  bn.h  buffer.cpp  buffer.h  compiler.h  concatenation_kdf.cpp  config.h.in  counter_kdf.cpp  ec_gen.cpp  ec_utils.cpp  ed_gen.cpp  env.cpp  env.h  evp_gen.cpp  fips_kat_self_test.cpp  fips_status.cpp  hash_evp_template.cpp  hash_evp_template.cpp.template  hash_template.cpp.template  hkdf.cpp  hmac.cpp  hmac_template.cpp.template  hpke_cipher.cpp  hpke_gen.cpp  java_evp_keys.cpp  key_factory.cpp  (+40 more)
docker/: Centos6ReleaseTest.Dockerfile
etc/: amazon-corretto-crypto-provider-jdk15.security  amazon-corretto-crypto-provider.security
examples/break-tests/: .gitignore  README.md  settings.gradle.kts
examples/break-tests/app/: build.gradle.kts
examples/gradle-kt-dsl/: .gitignore  README.md  run-tests.sh  settings.gradle.kts
examples/gradle-kt-dsl/lib/: build.gradle.kts
src/: MANIFEST.MF  module-info.java
src/com/amazon/corretto/crypto/provider/: AccessibleByteArrayOutputStream.java  AesCbcSpi.java  AesCfbSpi.java  AesCtrDrbg.java  AesGcmSivSpi.java  AesGcmSpi.java  AesKeyWrapPaddingSpi.java  AesKeyWrapSpi.java  AesXtsSpi.java  Agent.java  AmazonCorrettoCryptoProvider.java  ArrayCache.java  BufferShrinkStrategy.java  ConcatenationKdfSpec.java  ConcatenationKdfSpi.java  ConstantTime.java  CounterKdfSpec.java  CounterKdfSpi.java  DebugFlag.java  DestroyableSecretKey.java  EcGen.java  EcParameters.java  EcUtils.java  EdGen.java  EvpDhKey.java  EvpDhPrivateKey.java  EvpDhPublicKey.java  EvpDsaKey.java  EvpDsaPrivateKey.java  EvpDsaPublicKey.java  EvpEcKey.java  EvpEcPrivateKey.java  EvpEcPublicKey.java  EvpEdEcKey.java  EvpEdEcPrivateKey.java  EvpEdEcPublicKey.java  EvpEdKey.java  EvpEdPrivateKey.java  EvpEdPublicKey.java  EvpHmac.java  (+65 more)
src/com/amazon/corretto/crypto/utils/: DigestUtils.java  EcUtils.java  MlDsaUtils.java  MlKemUtils.java
test-data/: index.txt  kbkdf_counter.txt  sskdf.txt
tests/ci/: README.md  common_fuzz.sh  common_posix_setup.sh  run_accp_basic_tests.sh  run_accp_dieharder.sh  run_accp_overkill.sh  run_accp_test_integration.sh  run_cryptofuzz.sh  run_windows_tests.bat
tests/ci/cdk/: .gitignore  README.md  app.py  cdk.context.json  nohup.out  run-cdk.sh  setup.py
tests/ci/cdk/cdk/: accp_github_ci_stack.py  accp_github_fuzz_ci_stack.py  linux_docker_image_batch_build_stack.py
tests/ci/cdk/cdk/codebuild/: dieharder_overkill_omnibus.yaml  github_ci_linux_x86_omnibus.yaml  linux_img_build_omnibus.yaml  pr_fuzzing_omnibus.yaml  pr_integration_linux_arm_omnibus.yaml  pr_integration_linux_x86_omnibus.yaml  pr_integration_windows_x86_omnibus.yaml
tests/ci/cdk/cdk/ssm/: windows_docker_build_ssm_document.yaml
tests/ci/cdk/util/: iam_policies.py  metadata.py
tests/ci/codebuild/: linux-arm-docker-img-build.yml  linux-x86-docker-img-build.yml  run_accp_basic_tests.yml  run_accp_basic_tests_fips.yml  run_accp_cryptofuzz.yml  run_accp_dieharder_fips.yml  run_accp_legacy_build.yml  run_accp_overkill.yml  run_accp_overkill_fips.yml  run_accp_test_integration.yml  run_accp_test_integration_fips.yml
tests/ci/codebuild/linux-x86/: run_accp_basic_tests.yml  run_accp_dieharder.yml  run_accp_overkill.yml  run_accp_test_integration.yml
tests/ci/codebuild/release/: al2_aarch64_test.yml  al2_x64_test.yml  linux_aarch64_build.yml  linux_x64_build.yml  release.yml  stage.yml
tests/ci/codebuild/windows-x86/: windows-msvc2015.yml  windows-msvc2017.yml
tests/ci/docker_images/dependencies/: build_cryptofuzz_modules.sh
tests/ci/docker_images/linux-arm/: README.md  build_images.sh  push_images.sh
tests/ci/docker_images/linux-arm/amazonlinux-2_accp_base/: Dockerfile
tests/ci/docker_images/linux-arm/amazonlinux-2_gcc-7x_corretto/: Dockerfile
tests/ci/docker_images/linux-arm/ubuntu-20.04_accp_base/: Dockerfile
tests/ci/docker_images/linux-arm/ubuntu-20.04_gcc-7x_corretto/: Dockerfile
tests/ci/docker_images/linux-x86/: build_images.sh  build_legacy_image.sh  push_images.sh
tests/ci/docker_images/linux-x86/amazonlinux-2_accp_base/: Dockerfile
tests/ci/docker_images/linux-x86/amazonlinux-2_clang-11x/: Dockerfile
tests/ci/docker_images/linux-x86/amazonlinux-2_clang-11x_cryptofuzz/: Dockerfile
tests/ci/docker_images/linux-x86/amazonlinux-2_gcc-7x_corretto/: Dockerfile
tests/ci/docker_images/linux-x86/centos-7_gcc-4x/: Dockerfile
tests/ci/docker_images/linux-x86/ubuntu-10.04_gcc-4.1x_corretto/: Dockerfile
tests/ci/docker_images/linux-x86/ubuntu-20.04_accp_base/: Dockerfile
tests/ci/docker_images/linux-x86/ubuntu-20.04_gcc-7x_corretto/: Dockerfile
tests/ci/docker_images/windows/: build_images.ps1  push_images.ps1
tests/ci/docker_images/windows/vs2015_corretto/: Dockerfile
tests/ci/docker_images/windows/vs2017_corretto/: Dockerfile
tests/ci/docker_images/windows/windows_base/: Dockerfile
tests/jca-conformance/: README.md  jdk-tags.txt  jtreg-test-roots.txt  jtreg-version.txt  run-jtreg.sh
tests/jca-conformance/exclusions/: common.txt  jdk17.txt  jdk21.txt
(+187 files in other folders)
